# android-apngrs

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.circleci/: config.yml
android-apngrs/: build.gradle.kts  consumer-rules.pro
android-apngrs-coil/: build.gradle.kts
android-apngrs-coil/src/main/kotlin/me/tatarka/android/apngrs/coil/: ApngDecoderDecoder.kt
android-apngrs/src/androidTest/kotlin/me/tatarka/android/apngrs/: ApngDecoderTest.kt
android-apngrs/src/main/kotlin/me/tatarka/android/apngrs/: ApngDecoder.kt  ApngDrawable.kt
android-apngrs/src/main/rust/: Cargo.toml
android-apngrs/src/main/rust/src/: lib.rs
android-pngrs/src/main/rust/src/: lib.rs
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/me/tatarka/android/pngrs/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  image_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
benchmark/: build.gradle.kts
benchmark/src/androidTest/kotlin/me/tatarka/android/benchmark/: ApngDecoderBenchmark.kt
gradle/wrapper/: gradle-wrapper.properties
