[package]
name = "android_apngrs"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["png"] }
jni = "0.21.0"
[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.7.0", features = ["bitmap"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
